fixes z-index of blobs on title-card

--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@ body {
   height: 235px;
   bottom: 0;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  z-index: -1;
 }
 
 .title-card__yellow-blob {
@@ -80,6 +81,7 @@ body {
   right: 0;
   top: 0;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  z-index: -1;
 }
 
 /* 
